dark mode style fixes

--- a/core/theme/style_colors.css
+++ b/core/theme/style_colors.css
@@ -212,4 +212,11 @@ div.fileupload-progress.in {
         background-color: var(--bs-dark-bg-subtle);
     }
 
+    div.fpcm.ui-files-item:hover,
+    div.fpcm.ui-files-item:focus,
+    div.fpcm.ui-files-item:active,
+    div.fpcm-ui-dataview div.row:hover {
+        background: rgba(255, 239, 143, 0.25);
+    }    
+    
 }
